# uefi-settool

./: .gitignore  CMakeLists.txt  build-linux.sh  build-windows.sh  main.cpp  readme.md
include/: bootentry.h  ibootmanager.h  linuxbootmanager.h  mainwindow.h  winbootmanager.h
src/: linuxbootmanager.cpp  mainwindow.cpp  winbootmanager.cpp
